# Decision_tree

./: .gitignore  Abstract_regressor.h  CMakeLists.txt  Random_forest_regressor.cpp  Random_forest_regressor.h  Random_forest_tree.cpp  Random_forest_tree.h  Regression_tree.cpp  Regression_tree.h  Table.cpp  Table.h  Tools.cpp  Tools.h  daily-min-temperatures.csv  daily-total-female-births.csv  dataset.csv  main.cpp
